--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 [tox]
-envlist = py38, py39, py310, flake8
+envlist = py{38,39,310}, flake8
 isolated_build = True
 
 [testenv]
 basepython = python3.8
 deps =
-    nose2
+  nose2==0.11.0
 commands = nose2 {posargs}
 
 [testenv:py38]
@@ -19,8 +19,13 @@ basepython = python3.10
 
 [testenv:flake8]
 deps =
-    flake8
+  flake8==4.0.1
 commands = flake8 python_project_boilerplate tests
+
+[testenv:mypy]
+deps =
+  mypy==0.961
+commands = mypy
 
 [gh-actions]
 python =
