--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -19,6 +19,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+
     - name: Build
       run: python setup.py sdist
     - name: Publish to PyPI
@@ -27,3 +28,11 @@ jobs:
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
+
+    # or
+    # https://github.com/marketplace/actions/publish-python-poetry-package
+    - name: Publish to PyPI
+      uses: JRubics/poetry-publish@v1.11
+      with:
+        pypi_token: ${{ secrets.PYPI_API_TOKEN }}
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
