--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,14 @@ repository = "https://github.com/Josef-Friedrich/python-project-boilerplate"
 license = "MIT" # GPL-3.0-only LGPL-2.1-only
 # https://pypi.org/classifiers/
 classifiers = [
-  'Development Status :: 5 - Production/Stable',
-  'Programming Language :: Python :: 3 :: Only',
-  'Programming Language :: Python :: 3.8',
-  'Programming Language :: Python :: 3.9',
-  'Programming Language :: Python :: 3.10',
-  'Programming Language :: Python :: 3',
-  'Topic :: Utilities',
-  'License :: OSI Approved :: MIT License', # 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)', 'License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)'
+  "Development Status :: 5 - Production/Stable",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3",
+  "Topic :: Utilities",
+  "License :: OSI Approved :: MIT License", # "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)"
 ]
 
 [tool.poetry.dependencies]
