--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{38,39,310}, flake8
+envlist = py{38,39,310,311}, flake8
 isolated_build = True
 
 [testenv]
@@ -17,6 +17,9 @@ basepython = python3.9
 [testenv:py310]
 basepython = python3.10
 
+[testenv:py311]
+basepython = python3.11
+
 [testenv:flake8]
 deps =
   flake8==4.0.1
@@ -32,3 +35,4 @@ python =
     3.8: py38, docs, flake8
     3.9: py39
     3.10: py310
+    3.11: py311
