Improve tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,9 @@ envlist = py{38,39,310,311}, flake8
 isolated_build = True
 
 [testenv]
-basepython = python3.8
+basepython = python3.10
 deps =
-  nose2==0.11.0
+    nose2==0.11.0
 commands = nose2 {posargs}
 
 [testenv:py38]
@@ -20,9 +20,17 @@ basepython = python3.10
 [testenv:py311]
 basepython = python3.11
 
+[testenv:docs]
+deps =
+    sphinx==5.0.2
+    sphinx_rtd_theme==1.0.0
+commands =
+    ./_generate-readme.py
+    sphinx-build -W -q -b html doc/source {envtmpdir}/html
+
 [testenv:flake8]
 deps =
-  flake8==4.0.1
+    flake8==4.0.1
 commands = flake8 python_project_boilerplate tests
 
 [testenv:mypy]
@@ -32,7 +40,7 @@ commands = mypy
 
 [gh-actions]
 python =
-    3.8: py38, docs, flake8
+    3.8: py38
     3.9: py39
-    3.10: py310
+    3.10: py310, docs, flake8
     3.11: py311
