Simplify tox config

--- a/tox.ini
+++ b/tox.ini
@@ -3,26 +3,18 @@ envlist = py{38,39,310,311}, flake8
 isolated_build = True
 
 [testenv]
+# Do not use basepython here. This way the existing Python version can
+# be selected automatically.
+# basepython = python3.10
 deps =
     nose2==0.11.0
 commands = nose2 {posargs}
-
-[testenv:py38]
-basepython = python3.8
-
-[testenv:py39]
-basepython = python3.9
-
-[testenv:py310]
-basepython = python3.10
-
-[testenv:py311]
-basepython = python3.11
 
 [testenv:docs]
 deps =
     sphinx==5.0.2
     sphinx_rtd_theme==1.0.0
+    sphinx_argparse==0.3.1
 commands =
     ./_generate-readme.py
     sphinx-build -W -q -b html doc/source {envtmpdir}/html
@@ -34,7 +26,7 @@ commands = flake8 python_project_boilerplate tests
 
 [testenv:mypy]
 deps =
-  mypy==0.961
+    mypy==0.961
 commands = mypy
 
 [gh-actions]
