--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,8 @@ isolated_build = True
 # basepython = python3.10
 deps =
     nose2==0.11.0
-commands = nose2 {posargs}
+# --output-buffer captures the printed output of the tests.
+commands = nose2 --output-buffer {posargs}
 
 [testenv:docs]
 deps =
