--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,17 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.8"
 
+[tool.poetry.group.dev.dependencies]
+beautifulsoup4 = "^4.11.1"
+pytest = "^5.2"
+mypy = "^0.961"
+autopep8 = "^1.6.0"
+readme-patcher = "^0.3.0"
+# readme-patcher = { path = "../readme_patcher", develop = true }
+tox = "^3.25.1"
+black = "^22.6.0"
+isort = "^5.10.1"
+
 [build-system]
 requires = ["poetry>=1.2.0b2"]
 build-backend = "poetry.masonry.api"
