--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,14 @@ deps =
     flake8==4.0.1
 commands = flake8 python_project_boilerplate tests
 
+[testenv:format]
+deps =
+    black
+    isort
+commands =
+    black .
+    isort .
+
 [testenv:mypy]
 deps =
     mypy==0.961
