--- a/tox.ini
+++ b/tox.ini
@@ -14,10 +14,11 @@ commands = nose2 --output-buffer {posargs}
 [testenv:docs]
 deps =
     sphinx==5.0.2
-    sphinx_rtd_theme==1.0.0
-    sphinx_argparse==0.3.1
+    sphinx-rtd-theme==1.0.0
+    sphinx-argparse==0.3.1
+    readme-patcher==0.6.0
 commands =
-    ./_generate-readme.py
+    readme-patcher
     sphinx-build -W -q -b html doc/source {envtmpdir}/html
 
 [testenv:flake8]
