Rename tox environments

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{38,39,310,311}, flake8
+envlist = py{38,39,310,311}, format, lint
 isolated_build = True
 
 [testenv]
@@ -21,27 +21,25 @@ commands =
     readme-patcher
     sphinx-build -W -q -b html doc/source {envtmpdir}/html
 
-[testenv:flake8]
-deps =
-    flake8==4.0.1
-commands = flake8 python_project_boilerplate tests
-
 [testenv:format]
 deps =
-    black
-    isort
+    isort==5.10.1
+    black==22.6.0
 commands =
-    black .
     isort .
+    black .
 
-[testenv:mypy]
+[testenv:lint]
 deps =
+    flake8==4.0.1
     mypy==0.961
-commands = mypy
+commands =
+    flake8 python_project_boilerplate tests
+    mypy .
 
 [gh-actions]
 python =
     3.8: py38
     3.9: py39
-    3.10: py310, docs, flake8
+    3.10: py310, docs, format, lint
     3.11: py311
