--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,9 +12,9 @@
     "**/MANIFEST": true,
     "**/nosetests.xml": true
   },
-  "esbonio.sphinx.confDir": "",
   "python.formatting.provider": "black",
   "[python]": {
     "editor.rulers": [79, 80, 88]
-  }
+  },
+  "python.defaultInterpreterPath": ".venv/bin/python"
 }
