--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,14 @@
   "[python]": {
     "editor.rulers": [79, 80, 88]
   },
-  "python.defaultInterpreterPath": ".venv/bin/python"
+  "python.defaultInterpreterPath": ".venv/bin/python",
+  "python.testing.unittestArgs": [
+    "-v",
+    "-s",
+    "./tests",
+    "-p",
+    "test_*.py"
+  ],
+  "python.testing.pytestEnabled": false,
+  "python.testing.unittestEnabled": true
 }
