--- a/tox.ini
+++ b/tox.ini
@@ -41,5 +41,5 @@ commands =
 python =
     3.8: py38
     3.9: py39
-    3.10: py310, docs, format, lint
+    3.10: py310, docs, lint
     3.11: py311
