--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{38,39,310,311}, format, lint
+envlist = py{38,39,310,311}, format, docs, lint
 isolated_build = True
 
 [testenv]
@@ -11,16 +11,6 @@ deps =
 # --output-buffer captures the printed output of the tests.
 commands = nose2 --output-buffer {posargs}
 
-[testenv:docs]
-deps =
-    sphinx==5.0.2
-    sphinx-rtd-theme==1.0.0
-    sphinx-argparse==0.3.1
-    readme-patcher==0.6.0
-commands =
-    readme-patcher
-    sphinx-build -W -q -b html doc/source {envtmpdir}/html
-
 [testenv:format]
 deps =
     isort==5.10.1
@@ -29,17 +19,27 @@ commands =
     isort .
     black .
 
+[testenv:docs]
+deps =
+    sphinx==5.0.2
+    sphinx-rtd-theme==1.0.0
+    sphinx-argparse==0.3.1
+    readme-patcher==0.6.0
+commands =
+    readme-patcher
+    sphinx-build -W -q docs docs/_build
+
 [testenv:lint]
 deps =
     flake8==4.0.1
     mypy==0.961
 commands =
     flake8 python_project_boilerplate tests
-    mypy .
+    mypy python_project_boilerplate tests
 
 [gh-actions]
 python =
     3.8: py38
     3.9: py39
-    3.10: py310, docs, lint
+    3.10: py310, format, docs, lint
     3.11: py311
