--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,11 @@
 [flake8]
 max-line-length = 88
 extend-ignore = E203
+
+[build_sphinx]
+source-dir = docs
+build-dir  = docs/_build
+all_files  = 1
+
+[upload_sphinx]
+upload-dir = docs/_build/html
