--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ black = "^22.6.0"
 isort = "^5.10.1"
 
 [build-system]
-requires = ["poetry>=1.2.0b2"]
+requires = ["poetry>=1.4.2"]
 build-backend = "poetry.masonry.api"
 
 [tool.poetry-dynamic-versioning]
