--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.8"
 Sphinx = "^5.0.2"
+poetry = "^1.7.1"
 
 [tool.poetry.group.dev.dependencies]
 beautifulsoup4 = "^4.11.1"
