--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,11 @@ beautifulsoup4 = "^4.11.1"
 pytest = "^5.2"
 mypy = "^0.961"
 autopep8 = "^1.6.0"
-readme-patcher = "^0.5.0"
+readme-patcher = "^0.6.0"
 # readme-patcher = { path = "../readme_patcher", develop = true }
 tox = "^3.25.1"
+ruff = "^0.1.9"
+nose2 = "^0.14.0"
 
 [build-system]
 requires = ["poetry-core"]
