--- a/tox.ini
+++ b/tox.ini
@@ -13,11 +13,11 @@ commands = nose2 --output-buffer {posargs}
 
 [testenv:format]
 deps =
-    isort==5.10.1
-    black==22.6.0
+    ruff==0.1.9
 commands =
-    isort .
-    black .
+    ; sort imports
+    ruff check --select I --fix .
+    ruff format
 
 [testenv:docs]
 deps =
@@ -31,10 +31,10 @@ commands =
 
 [testenv:lint]
 deps =
-    flake8==4.0.1
     mypy==0.961
-commands =
-    flake8 python_project_boilerplate tests
+    ruff==0.1.9
+commands = 
+    ruff check
     mypy python_project_boilerplate tests
 
 [gh-actions]
@@ -43,3 +43,4 @@ python =
     3.9: py39
     3.10: py310, format, docs, lint
     3.11: py311
+    3.12: py312
