--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -9,17 +9,22 @@ on:
     - '*' # Push events to every tag not containing /
 
 jobs:
-  build-n-publish:
+  build-and-publish:
     name: Build and Publish to PyPI
     runs-on: ubuntu-latest
     steps:
+      # https://github.com/marketplace/actions/checkout
     - name: Checkout git repository
-      uses: actions/checkout@v2
-    - name: Setup Python3.8
-      uses: actions/setup-python@v2
+      uses: actions/checkout@v4
+      # https://github.com/marketplace/actions/setup-python
+    - name: Setup Python
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.8
+        python-version: "3.x"
 
+    # Build ####################################################################
+
+    # https://github.com/marketplace/actions/pypi-publish
     - name: Build
       run: python setup.py sdist
     - name: Publish to PyPI
@@ -30,9 +35,10 @@ jobs:
         password: ${{ secrets.PYPI_API_TOKEN }}
 
     # or
+
     # https://github.com/marketplace/actions/publish-python-poetry-package
     - name: Publish to PyPI
-      uses: JRubics/poetry-publish@v1.11
+      uses: JRubics/poetry-publish@v1.17
       with:
         pypi_token: ${{ secrets.PYPI_API_TOKEN }}
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
