--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,14 +27,6 @@
     "reportImportCycles": "information"
   },
   "python.defaultInterpreterPath": ".venv/bin/python",
-  "python.testing.unittestArgs": [
-    "-v",
-    "-s",
-    "./tests",
-    "-p",
-    "test_*.py"
-  ],
-  "python.testing.pytestEnabled": false,
-  "python.testing.unittestEnabled": true,
+  "python.testing.pytestEnabled": true,
   "esbonio.sphinx.confDir": ""
 }
