--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,13 @@
 [tox]
-envlist = py{38,39,310,311}, format, docs, lint
+envlist = py{39,310,311}, format, docs, lint
 isolated_build = True
 
 [testenv]
 # Do not use basepython here. This way the existing Python version can
 # be selected automatically.
 # basepython = python3.10
-deps =
-    nose2==0.14.0
-# --output-buffer captures the printed output of the tests.
-commands = nose2 --output-buffer {posargs}
+deps = pytest
+commands = pytest
 
 [testenv:format]
 deps =
@@ -35,11 +33,10 @@ deps =
     ruff==0.1.9
 commands = 
     ruff check
-    mypy python_project_boilerplate tests
+    mypy python_boilerplate tests
 
 [gh-actions]
 python =
-    3.8: py38
     3.9: py39
     3.10: py310, format, docs, lint
     3.11: py311
