--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ commands =
 
 [testenv:docs]
 deps =
-    sphinx==7.2.6 
+    sphinx==7.2.6
     sphinx-rtd-theme==2.0.0
     sphinx-argparse==0.3.1
     readme-patcher==0.6.0
@@ -31,9 +31,9 @@ commands =
 deps =
     mypy==1.8.0
     ruff==0.1.9
-commands = 
+commands =
     ruff check
-    mypy python_boilerplate tests
+    mypy typings python_boilerplate tests
 
 [gh-actions]
 python =
