Add some fixtures

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,7 @@ commands =
 deps =
     mypy==1.8.0
     ruff==0.1.9
+    pytest==7.4.4
 commands =
     ruff check
     mypy typings python_boilerplate tests
