Simplify tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,7 @@ deps = pytest
 commands = pytest
 
 [testenv:format]
-deps =
-    ruff==0.1.9
+deps = ruff
 commands =
     ; sort imports
     ruff check --select I --fix .
@@ -29,9 +28,9 @@ commands =
 
 [testenv:lint]
 deps =
-    mypy==1.8.0
-    ruff==0.1.9
-    pytest==7.4.4
+    mypy
+    ruff
+    pytest
 commands =
     ruff check
     mypy typings python_boilerplate tests
