Improve Sphinx config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ click = "^8.1.7"
 [tool.poetry.group.dev.dependencies]
 beautifulsoup4 = "^4.11.1"
 poetry = "^1.7.1"
-Sphinx = "^7.2.6"
+Sphinx = "7"
+sphinx-rtd-theme = "2"
 pytest = "^7.4.4"
 mypy = "^0.961"
 autopep8 = "^1.6.0"
