--- a/tox.ini
+++ b/tox.ini
@@ -28,11 +28,15 @@ commands =
 
 [testenv:lint]
 deps =
-    mypy
     ruff
-    pytest
 commands =
     ruff check
+
+[testenv:type-check]
+deps =
+    mypy
+    pytest
+commands =
     mypy typings python_boilerplate tests
 
 [gh-actions]
