--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{39,310,311,312}, format, docs, lint
+envlist = py{39,310,311,312}, format, docs, lint, type-check
 isolated_build = True
 
 [testenv]
