Git repo dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ pytest = "^8"
 mypy = "^1"
 autopep8 = "^1.6.0"
 readme-patcher = "^0"
+# https://python-poetry.org/docs/dependency-specification/#git-dependencies
+# requests = { git = "https://github.com/requests/requests.git" }
 # readme-patcher = { path = "../readme_patcher", develop = true }
 tox = "^4"
 ruff = "^0"
