--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,14 +21,19 @@ jobs:
     steps:
       # https://github.com/marketplace/actions/checkout
       - uses: actions/checkout@v4
-      # https://github.com/marketplace/actions/setup-python
-      - uses: actions/setup-python@v5
+
+      # https://docs.astral.sh/uv/guides/integration/github/#multiple-python-versions
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip setuptools wheel virtualenv tox tox-gh-actions
+
+      - name: Set up Python
+        run: uv python install
+
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
 
       # https://github.com/ymyzk/tox-gh-actions
       - name: Run tox targets for ${{ matrix.python-version }}
-        run: python -m tox
+        run: uv run pytest tests
