--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "A collection of boilerplate files and templates for my Python pro
 authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
 requires-python = "~=3.10"
 readme = "README.rst"
-license = "MIT"
+license = { text = "MIT" }
 classifiers = [
     "Private :: Do not Upload",
     "Development Status :: 5 - Production/Stable",
@@ -19,10 +19,7 @@ classifiers = [
     "Typing :: Stubs Only",
     "License :: OSI Approved :: MIT License",
 ]
-dependencies = [
-    "fire>=0.5.0,<0.6",
-    "click>=8.1.7,<9",
-]
+dependencies = ["fire>=0.5.0,<0.6", "click>=8.1.7,<9"]
 
 [project.urls]
 Repository = "https://github.com/Josef-Friedrich/python-project-boilerplate"
@@ -42,7 +39,7 @@ dev = [
     "pytest>=8,<9",
     "mypy>=1,<2",
     "autopep8>=2,<3",
-    "readme-patcher>=0,<1",
+    "readme-patcher",
     "tox>=4,<5",
     "ruff>=0,<1",
     "pip-tools>=7,<8",
@@ -68,3 +65,6 @@ reportInvalidStringEscapeSequence = false
 
 [tool.ruff.format]
 docstring-code-format = true
+
+[tool.uv.sources]
+readme-patcher = { git = "https://github.com/Josef-Friedrich/readme_patcher.git", branch = "main" }
