--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,3 +72,8 @@ docstring-code-format = true
 
 [tool.uv.sources]
 readme-patcher = { git = "https://github.com/Josef-Friedrich/readme_patcher.git", branch = "main" }
+
+[tool.pytest.ini_options]
+markers = [
+    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
+]
