--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,24 +10,30 @@ on:
   workflow_dispatch:
 
 jobs:
-  tests:
+  build:
+    name: continuous-integration
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+          - "3.10"
+          - "3.11"
+          - "3.12"
+          - "3.13"
 
     steps:
       # https://github.com/marketplace/actions/checkout
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
 
       # https://docs.astral.sh/uv/guides/integration/github/#multiple-python-versions
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
+      - name: Install uv and set the Python version
+        uses: astral-sh/setup-uv@v7
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Set up Python
-        run: uv python install
 
       - name: Install the project
         run: uv sync --locked --all-extras --dev
 
-      - name: Run make all
-        run: make all
+      - name: Run tests
+        # For example, using `pytest`
+        run: uv run pytest tests
