--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,9 +37,6 @@ Repository = "https://github.com/Josef-Friedrich/python-project-boilerplate"
 [dependency-groups]
 dev = [
     "beautifulsoup4>=4,<5",
-    "poetry>=1,<2",
-    "Sphinx>=8,<9",
-    "sphinx-rtd-theme>=3,<4",
     "pytest>=8,<9",
     "mypy>=1,<2",
     "autopep8>=2,<3",
@@ -48,6 +45,13 @@ dev = [
     "ruff>=0,<1",
     "pip-tools>=7,<8",
 ]
+docs = [
+    "sphinx>=9.1.0",
+    "sphinx-rtd-theme>=3.1.0",
+]
+
+[tool.uv.dependency-groups]
+docs = {requires-python = ">=3.12"}
 
 [build-system]
 requires = ["uv_build>=0.9.26,<0.10.0"]
