--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,8 +46,8 @@ requires = ["uv_build>=0.9.26,<0.10.0"]
 build-backend = "uv_build"
 
 # Single file, for example ./userdetect.py
+# do not use module-name = "userdetect" -> build error
 # [tool.uv.build-backend]
-# module-name = "userdetect"
 # module-root = ""
 # namespace = true
 
