--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,5 +1,4 @@
 ---
-
 # Create an environment called pypi
 # https://github.com/Josef-Friedrich/<repo>/settings/environments
 
@@ -10,34 +9,37 @@
 # https://docs.pypi.org/trusted-publishers/
 # https://packaging.python.org/en/latest/guides/publishing-package-distribution-releases-using-github-actions-ci-cd-workflows/
 
-name: Build and Publish to PyPI
+
+# https://docs.astral.sh/uv/guides/integration/github/#publishing-to-pypi
+name: "Publish"
 
 on:
   push:
     tags:
-      - "v*"
+      # Publish on any tag starting with a `v`, e.g., v0.1.0
+      - v*
 
 jobs:
-  build-and-publish:
-    name: Build and Publish to PyPI
+  run:
     runs-on: ubuntu-latest
-    environment: pypi
+    environment:
+      name: pypi
     permissions:
       id-token: write
+      contents: read
     steps:
-      # https://github.com/marketplace/actions/checkout
-      - name: Checkout git repository
-        uses: actions/checkout@v4
-
-      # https://docs.astral.sh/uv/guides/integration/github/
-      - name: Install uv and setup the python version
-        uses: astral-sh/setup-uv@v5
-
-      - name: Install the project
-        run: uv sync --all-groups
-
-      - name: Build wheel
+      - name: Checkout
+        uses: actions/checkout@v6
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
+      - name: Install Python 3.13
+        run: uv python install 3.13
+      - name: Build
         run: uv build
-
-      - name: Publish package
+      # Check that basic features work and we didn't miss to include crucial files
+      # - name: Smoke test (wheel)
+      #   run: uv run --isolated --no-project --with dist/*.whl tests/smoke_test.py
+      # - name: Smoke test (source distribution)
+      #   run: uv run --isolated --no-project --with dist/*.tar.gz tests/smoke_test.py
+      - name: Publish
         run: uv publish
